# nvenckepler

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Brewfile  build-ubuntu
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
src/: nvenc-compat.c  nvenc-helpers.c  nvenc-helpers.h  nvenc-opts-parser.c  nvenc-properties.c  nvenc.c  obs-nvenc.c
src/tester/: CMakeLists.txt  tester.cpp
